SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

On Log4j2 vulnerability CVE-2021-44228 concerning versions >=2.0-beta9 and <=2.14.1:
  Made transparent which logging libraries (Jars) SQuirreL uses by replacing logging Jars
  with no version in their file names and by making sure logging Jars are not bundled in other Jars.
  The logging Jars SQuirreL uses are: log4j-1.2.17.jar, slf4j-api-1.7.32.jar, commons-logging-1.2.jar.
  For information on the vulnerability see
  https://logging.apache.org/log4j/2.x/security.html
  https://nvd.nist.gov/vuln/detail/CVE-2021-44228

Upgraded to latest RSyntax version 3.1.3.

#605 The message panel's colors are made configurable.
  See menu File --> Global Preferences --> tab General
  --> section Appearance --> subsection "Message panel layout" on the bottom.
  This feature is used internally used to adjust the message panel coloring for the dark theme.
  If you were already using dark theme before this feature was implemented please re-apply the dark theme.

Look and Feel plugin: Replace Substance Look & Feel by Radiance Look & Feel
  Thanks to Slavomir Varchula for the patch.

Look and Feel plugin: Upgrade FlatLaF to 1.6.4
  Thanks to Slavomir Varchula for the patch.

#1090 (in bugs): Option to use statement separators instead of empty lines as bounds of SQL to execute.
  See menu File --> Global Preferences --> tab SQL --> section General
  --> checkbox "Use statement separator (instead of empty line) as bounds of current SQL"

Choosing color theme (see previous entry) now adjusts NULL value coloring, too.

#481 Introduced option to choose between the default (light) color theme and a dark theme.
  Changing to the dark color theme is done by switching to the FlatLaf Look&Feel with theme Flat Dark